<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginfgdesign"
    tools:context=".views.LoginActivityFirebase">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:text="FarmGuardian"
        android:textColor="#16871A"
        android:textColorLink="#151313"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="35dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/fgslogo" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        android:text="Login"
        android:textColor="#1D9E23"
        android:textColorLink="#151313"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTxtEMAIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:text="New account"
        android:textColor="@color/DarkGreen"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.264" />

    <EditText
        android:id="@+id/editTxtEMAIL"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:drawableTint="#B7575454"
        android:ems="10"
        android:hint="Email"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#121111"
        android:textColorHint="#F86C6868"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="265dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:drawableTint="#B7575454"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#0E0D0D"
        android:textColorHint="#676060"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtEMAIL"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Forgotpasword"
        android:layout_width="162dp"
        android:layout_height="28dp"


        android:layout_marginEnd="16dp"
        android:text="Forgot password"

        android:textColor="@color/DarkGreen"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.518" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:text="Login"
        android:textColor="#FFFFFF"
        android:textColorLink="#673AB7"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />
</androidx.constraintlayout.widget.ConstraintLayout>