...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebackground"
    tools:context=".HomeACActivity">

    <TextView
        android:id="@+id/textViewFG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FarmGuardian"
        android:textColor="#16871A"
        android:textColorLink="#151313"
        android:textSize="24sp"
...
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/Logout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
...
